--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -5,8 +5,32 @@
         <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
         <title>EDIT USER PROFILE</title>
     </head>
-    <h1>ADMIN / USER PROFILE</h1>
 <body>
+
+    <header>
+        <div class="logo left">
+            <img src="static/unreturned/LSPU.png" alt="Left Logo">
+        </div>
+        <div class="search-bar">
+            <input type="text" class="search-input" placeholder="Search...">
+            <i class="fas fa-search"></i>
+        </div>
+        <div class="logo right">
+            <img src="static/unreturned/CSS.png" alt="Right Logo">
+        </div> 
+    </header>
+    <div class="head"></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
+            <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
+            <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
+            <a href="{% url 'members' %}" class="navbar-brand">Members</a>
+            <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
+            <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+        </div>
+    </nav>
+
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
