--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -13,7 +13,7 @@
    <header>
       <div class="header">
         <div class="logo-left">
-         <img src="img\lspu-logo.png" alt="Left Logo">
+         <img src="img\lspu-logo.png" alt="LSPU Logo">
         </div>
 
         <div class="search">
@@ -22,7 +22,7 @@
        </div>
 
          <div class="logo-right">
-            <img src="img\ccs-logo.png" alt="Right Logo">
+            <img src="img\ccs-logo.png" alt="CSS Logo">
          </div>
         
       </div>
