--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -134,23 +134,25 @@ body {
     display: flex;
     align-items: center;
   }
-  
-  .search-input {
-    width: 95%; /* Adjusted to take 100% width on smaller screens */
+
+  .search-bar input[type=text]{
+    width: 300%; /* Adjusted to take 100% width on smaller screens */
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    
+  }
+
+  .search-bar button[type=submit]{
+    
     padding: 8px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
   }
   
-  .fa-search {
-    margin-left: -5%;
-    color: firebrick;
-    font-size: 18px;
-    cursor: pointer;
-    margin-top: 7px;
-
-  }
+  
   
   /* navigations */
   nav {
