--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -12,8 +12,10 @@
             <img src="static/unreturned/LSPU.png" alt="Left Logo">
         </div>
         <div class="search-bar">
-            <input type="text" class="search-input" placeholder="Search...">
-            <i class="fas fa-search"></i>
+            <form method="GET" action="{% url 'search_items_admin' %}">
+                <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+                <button type="submit">Search</button>
+            </form>
         </div>
         <div class="logo right">
             <img src="static/unreturned/CSS.png" alt="Right Logo">
