--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -5,7 +5,7 @@
    <title>Notifications</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css?family=Orienta:regular" rel="stylesheet" />
-   <link rel="stylesheet" href="notificationstyle.css">
+   <link rel="stylesheet" href="notification.css">
 </head>
 <style>
 </style> 
