--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -5,131 +5,10 @@
    <title>Notifications</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css?family=Orienta:regular" rel="stylesheet" />
-
+   <link rel="stylesheet" type="text/css" href="{% static '/notification/notificationstyle.css' %}">
 </head>
 <body>
-<style>
-   html{
-    overflow-x: hidden;
- }
- 
- body{
-    background: #eee;
- }
- 
- .header{
-    background-color: #7a1a22;
-    height: 100px;;
-    width: 1500px;
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
- }
-     
- .head{
-    display: flex;
-    background-color:#E67C37;
-    padding: 10px;
-    width: 1450px;
- }
-     
- .header .logo-left img{
-    width: 135px;
-    padding: 2rem;
- }
-    
- .header .logo-right img{
-    width: 95px;
-    padding: 6rem;
- }
- 
- /*navigations*/
- nav{
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
- }
- 
- .navbar-brand {
-    color: black;
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-right: 10px;
-    margin-left: 10px;
-    padding: 4rem;
-    text-decoration: none; /* Remove underline */
-    position: relative; /* Position for the pseudo-element */
-    transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
- }
- 
- /* Add hover effect */
- .navbar-brand:hover {
-    color:firebrick; /* Change text color on hover */
-    font-weight: lighter; /* Change font weight on hover, adjust as needed */
- }
- 
- .navbar-brand:hover::before {
-    visibility: visible;
-    transform: scaleX(1); /* Make the underline visible and scale it */
- }
- 
- .form{
-    background-color: #f8f9fa;
-    padding: 13rem 0;
-    border: 2px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
- }
- 
- p{
-    width: 200px;
-    height: 20px;
-    font-family: orienta;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 41.83px;
-    text-align: right;
- }
- .form-item {
-    background-color: #f8f9fa;
-    padding: 10rem;
-    border-bottom: 1px solid black;
-    margin: 35px 35px 35px 35px; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
-    border: 3px solid gray; /* Add border style */
-    border-radius: 10px; /* Add border-radius for rounded corners */
-    padding: auto;
- }
- 
- a:link{
-    color: #000;
-    background-color: transparent;
-    text-decoration: none;
- }
-  
- a:visited{
-    color: #92141e;
-    background-color: transparent;
-    text-decoration: none;
- }
-  
- a:hover{
-    color: #000;
-    background-color: transparent;
-    text-decoration: underline;
- }
-  
- a:active{
-    color: #92141e;
-    background-color: transparent;
-    text-decoration: underline;
- }
-</style>
+
    <header>
       <div class="header">
         <div class="logo-left">
