--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -15,6 +15,7 @@
          <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
         </div>
 
+        <div class="header1"></div>
         <div class="search">
          <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
          <i class="fas fa-search"></i>
