--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -122,7 +122,7 @@ html{
     align-items: center;
  }
 
- .header1{
+ header1{
    background-color: #7a1a22;
    height: 100px;;
    width: 1500px;
