--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -6,17 +6,43 @@
         <title>USER PROFILE</title>
     </head>
     <h1>USER PROFILE</h1>
-    <body>
-        <form method="GET" action="{% url 'search_items' %}">
-            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-            <button type="submit">Search</button>
-          </form>
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
-        {% include 'home/result_list.html' %}
-    </body>
+    <header>
+        <div class="header">
+          <div class="logo-left">
+           <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
+          </div>
+          
+          <div class="search">
+           <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
+           <i class="fas fa-search"></i>
+         </div>
+  
+           <div class="logo-right">
+              <img src="media\logo\ccs-logo.png" alt="CSS Logo">
+           </div>
+          
+        </div>
+      </header>
+  <div class="head"></div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <div class="container">
+        <a href="{% url 'search' &}" class="navbar-brand">Home</a>
+        <a href="{recents}" class="navbar-brand">Recents</a>
+        <a href="{unreturned}" class="navbar-brand">Unreturned</a>
+        <a href="{% url 'notifications' &}" class="navbar-brand">Notifications</a>
+        <a href="{% url 'account' &}" class="navbar-brand">Account</a>
+     </div>
+  </nav>
+
+  <div id="main" class="form">
+    <div class="item">
+      <div class="name">Account Name:</div>
+      <div class="email">Email:</div>
+      <div class="number">Contact Number:</div>
+ 
+      <button><a href="{% url 'editprofile' %}">EDIT PROFILE</a></button>
+      <button><a href="{% url 'logout' %}">LOG OUT</a></button>
+   </div>
+ </div>
+ 
 </html>
