--- a/static/members/memberstyle.css
+++ b/static/members/memberstyle.css
@@ -127,27 +127,34 @@ Start coding here
     margin-left: auto;
   }
   
+
   .search-bar {
     flex-grow: 1;
     margin-left: 2%;
     display: flex;
     align-items: center;
   }
-  
+
   .search-bar input[type=text]{
     width: 300%; /* Adjusted to take 100% width on smaller screens */
     padding: 8px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
+    
   }
 
   .search-bar button[type=submit]{
-    
+    cursor: pointer;
     padding: 8px;
     font-size: 16px;
-    border: none;
+    border: 1px solid gray;
     border-radius: 4px;
+    
+  }
+
+  .search-bar button:hover{
+    color: orange;
   }
   
   /* navigations */
