--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -14,7 +14,7 @@
         <div class="logo-left">
          <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
         </div>
-        
+
         <div class="search">
          <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
          <i class="fas fa-search"></i>
@@ -32,8 +32,8 @@
       <a href="{% url 'search' &}" class="navbar-brand">Home</a>
       <a href="{recents}" class="navbar-brand">Recents</a>
       <a href="{unreturned}" class="navbar-brand">Unreturned</a>
-      <a href="{% url 'notifications' &}" class="navbar-brand">Notifications</a>
-      <a href="{% url 'account' &}" class="navbar-brand">Account</a>
+      <a href="{% url 'notification' &}" class="navbar-brand">Notifications</a>
+      <a href="{% url 'userprofile' &}" class="navbar-brand">Account</a>
    </div>
 </nav>
 
