--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -29,8 +29,8 @@
         <a href="{% url 'search' &}" class="navbar-brand">Home</a>
         <a href="{recents}" class="navbar-brand">Recents</a>
         <a href="{unreturned}" class="navbar-brand">Unreturned</a>
-        <a href="{% url 'notifications' &}" class="navbar-brand">Notifications</a>
-        <a href="{% url 'account' &}" class="navbar-brand">Account</a>
+        <a href="{% url 'notification' &}" class="navbar-brand">Notifications</a>
+        <a href="{% url 'userprofile' &}" class="navbar-brand">Account</a>
      </div>
   </nav>
 
@@ -44,5 +44,5 @@
       <button><a href="{% url 'logout' %}">LOG OUT</a></button>
    </div>
  </div>
- 
+
 </html>
