--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -6,20 +6,41 @@
         <title>USER PROFILE</title>
     </head>
     <body>
-
+      <header>
+        <div class="header">
+          <div class="logo-left">
+           <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
+          </div>
+          
+          <div class="search">
+           <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
+           <i class="fas fa-search"></i>
+         </div>
+  
+           <div class="logo-right">
+              <img src="media\logo\ccs-logo.png" alt="CSS Logo">
+           </div>
+          
+        </div>
+      </header>
+      <div class="head"></div>
         <form method="GET" action="{% url 'search_items' %}">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
           </form>
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
-        {% include 'home/result_list.html' %}
 
-        
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+               <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+               <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+               <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+               <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
+               <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+               <button><a href="{% url 'logout' %}">Logout</a></button>
+            </div>
+         </nav>
+       
+        {% include 'home/result_list.html' %}
 
         <div style="display: flex; align-items: center; margin-top: 20px;">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
@@ -40,44 +61,11 @@
                     margin-top: 20px; /* Adjust the margin as needed */
                 }
             </style>
-
-            
-            
-            
-    <header>
-        <div class="header">
-          <div class="logo-left">
-           <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
-          </div>
-          
-          <div class="search">
-           <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
-           <i class="fas fa-search"></i>
-         </div>
-  
-           <div class="logo-right">
-              <img src="media\logo\ccs-logo.png" alt="CSS Logo">
+            <div id="main" class="form">
+              <div class="item">
+                <div class="name">Account Name:</div>
+                <div class="email">Email:</div>
+                <div class="number">Contact Number:</div>
+             </div>
            </div>
-          
-        </div>
-      </header>
-  <div class="head"></div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-     <div class="container">
-        <a href="{% url 'search' &}" class="navbar-brand">Home</a>
-        <a href="{recents}" class="navbar-brand">Recents</a>
-        <a href="{unreturned}" class="navbar-brand">Unreturned</a>
-        <a href="{% url 'notification' &}" class="navbar-brand">Notifications</a>
-        <a href="{% url 'userprofile' &}" class="navbar-brand">Account</a>
-     </div>
-  </nav>
-
-  <div id="main" class="form">
-    <div class="item">
-      <div class="name">Account Name:</div>
-      <div class="email">Email:</div>
-      <div class="number">Contact Number:</div>
-   </div>
- </div>
-
 </html>
