upp search recent

--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -12,14 +12,25 @@
         <div class="logo left">
             <img src="/static/home/LSPU.png" alt="Left Logo">
         </div>
-        <div class="search-bar">
+        <!--<div class="search-bar">
             <form method="GET" action="{% url 'search_items_admin' %}">
-                
                 <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
                 <button class="searchbb" type="submit">Search</button>
             </div>
               </form>
+        </div> -->
+
+        <div>
+            <form method="GET" action="{% url 'search_items_admin' %}">
+            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+            <button type="submit">Search</button>
+          </form>
         </div>
+
+
+
+
+
         <div class="logo right">
             <img src="/static/home/CSS.png" alt="Right Logo">
         </div> 
