--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -217,7 +217,9 @@ body {
     width: 80px;
     margin-left: auto;
   }
-  .search-bar {
+
+   /* search bar amin*/
+  /*.search-bar {
     display: flex;
     align-items: center;
 }
@@ -225,7 +227,7 @@ body {
 .search-form {
     display: flex;
     align-items: center;
-    margin-left: 10px; /* Adjust the margin as needed */
+    margin-left: 10px; 
 }
 
 input[name="q"] {
@@ -234,17 +236,18 @@ input[name="q"] {
     border: 2px solid black;
     border-radius: 4px;
     margin-right: 10px;
+    
 }
 
-.searchbb {
-    color: firebrick;
+.searchbtn{
+    color: red;
     font-size: 18px;
     cursor: pointer;
-    padding: 8px 12px; /* Adjust padding as needed */
+    padding: 8px 12px; 
     border: 2px solid firebrick; 
     border-radius: 4px;
     background-color: white;
-}
+}*/
   
   /* navigations */
   nav {
@@ -746,8 +749,8 @@ input[name="q"] {
     #selectAllCheckbox {
       margin-right: 10px; /* Add space between checkbox and label */
     }
-    
-    .search-bar {
+    /*ibang search*/
+   /* .search-bar {
       flex-grow: 1;
       margin-left: 2%;
   }
@@ -767,10 +770,10 @@ input[name="q"] {
   }
   
   .searchbb {
-      color: firebrick;
+      color: green;
       font-size: 18px;
       cursor: pointer;
-  }
+  } */
   #container {
     border-radius: 10px; /* Adjust the value as needed for the desired roundness */
     overflow: hidden; /* Ensure content inside doesn't overflow rounded corners */
@@ -830,7 +833,34 @@ input[name="q"] {
   margin: 0; /* Remove default margin */
   margin-right: 50px;
 }
-    
+    /*search bar recent*/
+   input[name="q"] {
+      width: 1070px; /* Adjust the width as needed */
+      padding: 8px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      margin-right: 10px;
+      margin-left: 10px;
+   }
+   button[type="submit"] {
+    width: 90px; /* Adjust the width as needed */
+    padding: 10px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    border: 2px solid orange;
+    border-radius: 4px;
+    background-color: white;
+    color: orange;
+    transition: background-color 0.3s ease; /* Smooth transition effect */
+
+}
+
+button[type="submit"]:hover {
+    background-color: lightgray; /* Change the background color on hover */
+    color: black; /* Change the text color on hover */
+}
+
 
 
 
