--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -190,7 +190,7 @@ html{
  p{
     font-family: orienta;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     margin-top: -10rem;
     margin-left: 1rem;
  }
