--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -45,6 +45,8 @@
         <div style="display: flex; align-items: center; margin-top: 20px;">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
 
+            <div id="main" class="form">
+               <div class="item">
             <div style="margin-left: 20px;">
                     <h2 class="account-heading">{{ user.username }}</h2>
                     <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user.profile.account_name }}</p>
@@ -54,6 +56,7 @@
 
                     <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
               </div>
+               </div>
             </div>
 
             <style>
