--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -195,6 +195,9 @@ html{
     margin-left: 1rem;
  }
  
+.rounded-circle account-img{
+    margin-left: 10rem;
+}
  
  .button{
     border: 3px solid gray;
