--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -43,9 +43,10 @@
         {% include 'home/result_list.html' %}
         <div id="main" class="form">
          <div class="item">
+            <div class="pic">
         <div style="display: flex; align-items: center; margin-top: 20px;">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
-
+         </div>
             
             <div style="margin-left: 20px;">
                     <h2 class="account-heading">{{ user.username }}</h2>
