--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -199,7 +199,7 @@ html{
     margin-left: 5rem;
 }
  
- .button{
+.btn{
     border: 3px solid gray;
     border-radius: 10px;
     margin-left: 16.5rem;
