--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -55,8 +55,8 @@
                     <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user.profile.contact_number }}</p>
  
                   <div class="btn>"
-                    <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
-            </div>
+                    <a href="{% url 'editprofile' %}">Edit Profile</a>
+                  </div>
               </div>
                </div>
             </div>
