--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -50,13 +50,12 @@
             
             <div style="margin-left: 20px;">
                     <h2 class="account-heading">{{ user.username }}</h2>
-                    <p class="text-secondary">Account Name: {{ user.profile.account_name }}</p>
+                    <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user.profile.account_name }}</p>
                     <p class="text-secondary" style="margin-top: 10px;">Email: {{ user.email }}</p>
                     <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user.profile.contact_number }}</p>
  
-                  <div class="btn>"
-                    <a href="{% url 'editprofile' %}">Edit Profile</a>
-                  </div>
+
+                    <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
               </div>
                </div>
             </div>
