--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -223,3 +223,218 @@ h1 {
     padding: 10px 15px;
 }
 
+*{
+   font-family: 'Nunito', sans-serif;
+   margin:0; padding:0;
+   box-sizing: border-box;
+   outline: none; border:none;
+   text-decoration: none;
+   transition: all .2s linear;
+   text-transform: capitalize;
+}
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+ }
+ 
+ body{
+    background: #eee;
+ }
+
+ head {
+   display: flex;
+   background-color: orange;
+   padding: 10px;
+ }
+
+ header {
+   display: flex;
+   background-color: firebrick;
+   padding: 10px;
+   justify-content: space-between;
+   align-items: center;
+ }
+
+ .logo .logo-cont .left img{
+  width: 135px;
+  margin-right: auto;
+ }
+ 
+ .logo .logo-cont .right img{
+  width: 95px;
+  margin-left: auto;
+ }
+
+ .search-bar{
+   flex-grow: 1;
+   margin-left: 2%;
+   display: flex;
+   align-items: center;
+ }
+
+ .search-input{
+   width: 95%; /* Adjusted to take 100% width on smaller screens */
+   padding: 8px;
+   font-size: 16px;
+   border: none;
+   border-radius: 4px;
+ }
+
+ nav {
+   background-color: #f8f9fa;
+   padding: 15px 0;
+   border-bottom: 1px solid #dee2e6;
+   box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+   margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+   border-radius: 15px;
+ }
+
+ .navbar-brand {
+   color: black;
+   font-weight: bold;
+   font-size: 2rem;
+   margin-right: 10px;
+   margin-left: 10px;
+   text-decoration: none; /* Remove underline */
+   position: relative; /* Position for the pseudo-element */
+   transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
+   gap: 10px;
+ }
+ 
+ /* Create an underline pseudo-element */
+ .navbar-brand::before {
+   content: '';
+   position: absolute;
+   width: 100%;
+   height: 2px;
+   bottom: 0;
+   left: 0;
+   background-color: firebrick; /* Initial underline color */
+   visibility: hidden;
+   transform: scaleX(0); /* Initially invisible */
+   transition: all 0.3s ease; /* Add a smooth transition for visibility and scale */
+ }
+ 
+ /* Add hover effect */
+ .navbar-brand:hover {
+   color:firebrick; /* Change text color on hover */
+   font-weight: lighter; /* Change font weight on hover, adjust as needed */
+ }
+ 
+ .navbar-brand:hover::before {
+   visibility: visible;
+   transform: scaleX(1); /* Make the underline visible and scale it */
+ }
+
+ .item .container{
+   display: grid;
+   grid-template-columns: auto auto auto auto auto;
+   gap: 10px;
+   padding: 15px;
+ }
+ 
+ .item .title{
+    font-size: 3.5rem;
+    color:#444;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
+    text-align: left;
+ }
+
+.form{
+   background-color: #f8f9fa;
+   padding: 15px 0;
+   border: 2px solid #dee2e6;
+   border-bottom: 1px solid #dee2e6;
+   box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+   margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+   border-radius: 15px;
+ }
+
+ .form-item {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  gap: 10px;
+  padding: 10px;
+}
+
+ .item-form-item {
+  background-color: #f8f9fa;
+  padding: 10px 0;
+  border-bottom: 1px solid black;
+  margin: 35px 35px 35px 35px; /* Adjusted margin for better responsiveness */
+  border-radius: 15px;
+  border: 3px solid gray; /* Add border style */
+  border-radius: 10px; /* Add border-radius for rounded corners */
+  padding: auto;
+  
+}
+
+ .form-items{
+  background-color: #f8f9fa;
+  padding: 10px 0;
+  border-bottom: 1px solid black;
+  margin: 35px 35px 35px 35px; /* Adjusted margin for better responsiveness */
+  border-radius: 15px;
+  border: 3px solid gray; /* Add border style */
+  border-radius: 10px; /* Add border-radius for rounded corners */
+  padding: auto;
+} 
+
+.form-item .items{
+  text-align: center;
+  padding:1.5rem;
+  background: #fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);  
+  outline: .1rem solid #ccc;
+  outline-offset: 0;
+  cursor: pointer;
+}
+
+.form-item .items:hover{
+  outline: .2rem solid #FF7F00;
+  outline-offset: -1rem;
+  cursor: pointer;
+}
+
+ .items h3 {
+   font-weight: bold;
+   margin: 10px; /* Adjust the margin as needed */
+   margin-left: 10px;
+   margin-top: 15px;
+ }
+
+ .item .container .category{
+  text-align: center;
+  padding: 20px 0;
+  background: #fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);  
+  outline: .1rem solid #ccc;
+  outline-offset: 0;
+  cursor: pointer;
+}
+
+ .item .container .category:hover{
+    outline: .2rem solid #FF7F00;
+    outline-offset: -1rem;
+    cursor: pointer;
+ }
+ .item .container .category img{
+    height: 10rem;
+ }
+ 
+ .item .container .category:hover img{
+    transform: scale(.9);
+ }
+ 
+ .item .container .category h3{
+    position: center;
+    bottom: 1rem; left: 1.5rem;
+    font-size: 2rem;
+    color:#444;
+ }
+ 
+ .item .container .category:hover h3{
+    color:#27ae60;
+ }
