--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -11,10 +11,25 @@
         {% if user.is_authenticated %}
             <h1>>Welcome, {{ user.username }}</h1>
         {% endif %}
+    <header>
+        <div class="logo"></div>
+
+      <div class="logo-cont"></div>
+
+      <div class="left">
+        <img src="LSPU.png" alt="">
+      </div>
+      <div class="logo-cont">
+        <img src="ccs.png" alt="">
+      </div>
+
+    </header>
 
         <form method="GET" action="{% url 'search_items' %}">
+            <div class="search-bar">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
+            </div>
           </form>
         
         <button><a href="{% url 'home' %}">Home</a></button>
