--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -17,10 +17,10 @@
       <div class="logo-cont"></div>
 
       <div class="left">
-        <img src="LSPU.png" alt="">
+        <img src="media\logo\LSPU.png" alt="">
       </div>
       <div class="logo-cont">
-        <img src="ccs.png" alt="">
+        <img src="media\logo\ccs.png" alt="">
       </div>
 
     </header>
