--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -31,13 +31,15 @@
             <button type="submit">Search</button>
             </div>
           </form>
-        
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+          <div class="head"></div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="containers">
+        <button><a href="{% url 'home' %}" class="navbar-brand"></a>>Home</a></button>
+        <button><a href="{% url 'recents' %}" class="navbar-brand"></a>>Recents</a></button>
+        <button><a href="{% url 'unreturned' %}" class="navbar-brand"></a>>Unreturned</a></button>
+        <button><a href="{% url 'notification' %}" class="navbar-brand"></a>>Notification</a></button>
+        <button><a href="{% url 'userprofile' %}" class="navbar-brand"></a>>Account</a></button>
+        <button><a href="{% url 'logout' %}" class="navbar-brand"></a>>Logout</a></button>
 
         <div class="categories">
             {% for category in categories %}
