--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -34,7 +34,7 @@
           <div class="head"></div>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="containers">
-        <button><a href="{% url 'home' %}" class="navbar-brand">>Home</a></button>
+        <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
         <button><a href="{% url 'recents' %}" class="navbar-brand">Recents</a></button>
         <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
         <button><a href="{% url 'notification' %}" class="navbar-brand">Notification</a></button>
