--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -31,9 +31,10 @@
             <button type="submit">Search</button>
             </div>
           </form>
+
           <div class="head"></div>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <div class="containers">
+              <div class="container">
         <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
         <button><a href="{% url 'recents' %}" class="navbar-brand">Recents</a></button>
         <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
