--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -38,7 +38,7 @@
 
           <div class="head"></div>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <div class="container">
+              <div class="containers">
         <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
         <button><a href="{% url 'recents' %}" class="navbar-brand">Recents</a></button>
         <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
