--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -249,7 +249,7 @@ html{
    width: 1450px;
  }
 
- .item_header {
+ .header {
    display: flex;
    background-color: firebrick;
    padding: 10px;
