--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -382,7 +382,7 @@ html{
   
 }
 
- .categories {
+ .containers {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
@@ -393,7 +393,7 @@ html{
   padding: auto;
 } 
 
-.categories {
+.containers {
   text-align: center;
   padding:1.5rem;
   background: #fff;
