--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -361,7 +361,7 @@ html{
   padding: 5px;
 }
 
- .categories {
+ .containers {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
