--- a/templates/home/result_list_admin.html
+++ b/templates/home/result_list_admin.html
@@ -2,14 +2,17 @@
 
 {% if results %}
   <ul>
+    <div class="result-button">
     <a href="{% url 'admin_home' %}"><button>Back</button></a>
+    </div>
     {% for result in results %}
       <li>
-        <div>
-          <img src="{% if result.item_photo %}/media/{{ result.item_photo }}{% else %}/static/path/to/placeholder-image.jpg{% endif %}" alt="{{ result.item_name }}" style="width: 100px; height: 100px;">
-          <button onclick="showBorrowForm('{{ result.item_id }}', '{{ result.item_name }}')">{{ result.item_name }}</button>
-          <button onclick="deleteItem('{{ result.item_id }}')">Remove</button>
-          
+        <div class="box">
+          <div class="item">
+              <img src="{% if result.item_photo %}/media/{{ result.item_photo }}{% else %}/static/path/to/placeholder-image.jpg{% endif %}" alt="{{ result.item_name }}" style="width: 100px; height: 100px;">
+              <button onclick="showBorrowForm('{{ result.item_id }}', '{{ result.item_name }}')">{{ result.item_name }}</button>
+              <button onclick="deleteItem('{{ result.item_id }}')">Remove</button>
+          </div>
         </div>
       </li>
     {% endfor %}
