--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -329,7 +329,7 @@ html{
    transform: scaleX(1); /* Make the underline visible and scale it */
  }
 
- .categories{
+ .containers {
    display: grid;
    grid-template-columns: auto auto auto auto auto;
    gap: 10px;
@@ -361,7 +361,7 @@ html{
   padding: 5px;
 }
 
- .categories {
+ .containers {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
