--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -329,7 +329,7 @@ html{
    transform: scaleX(1); /* Make the underline visible and scale it */
  }
 
- .containers {
+ .categories{
    display: grid;
    grid-template-columns: auto auto auto auto auto;
    gap: 10px;
@@ -344,7 +344,7 @@ html{
     text-align: left;
  }
 
-.containers {
+.categories {
    background-color: #f8f9fa;
    padding: 15px 0;
    border: 2px solid #dee2e6;
