--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -292,7 +292,7 @@ html{
    border-radius: 15px;
  }
 
- .navbar-brand {
+ .navbar-brand{
    color: black;
    font-weight: bold;
    font-size: 2rem;
@@ -335,6 +335,15 @@ html{
    gap: 10px;
    padding: 15px;
  }
+
+ .containers {
+        background-color: #f8f9fa;
+        padding: 15px 0;
+        border-bottom: 1px solid #dee2e6;
+        box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+        margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+        border-radius: 15px;
+}
  
  .item .title{
     font-size: 3.5rem;
@@ -344,7 +353,7 @@ html{
     text-align: left;
  }
 
-.categories {
+.form{
    background-color: #f8f9fa;
    padding: 15px 0;
    border: 2px solid #dee2e6;
@@ -361,7 +370,7 @@ html{
   padding: 5px;
 }
 
- .containers {
+ .item-form-item {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
@@ -373,7 +382,7 @@ html{
   
 }
 
- .containers {
+ .form-items{
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
@@ -384,7 +393,7 @@ html{
   padding: auto;
 } 
 
-.containers {
+.form-item .items{
   text-align: center;
   padding:1.5rem;
   background: #fff;
