--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -1691,6 +1691,23 @@ button:hover {
   font-weight: 800;
 
 }
+/*remove pagclick ng item*/
+.item-box{
+  display: flex;
+  flex-direction: column; /* Change this to 'row' */
+  border: 2px solid orange;
+  border-radius: 6px;
+  height: 150px;
+  width: 130px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  margin-left:10px;
+  margin-bottom: 10px;
+  background-color: rgb(255, 255, 255);
+  flex-shrink: 0;
+}
   /* Media queries for responsiveness */
   @media screen and (max-width: 768px) {
     header {
