--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -329,7 +329,7 @@ html{
    transform: scaleX(1); /* Make the underline visible and scale it */
  }
 
- .categories{
+ .containers {
    display: grid;
    grid-template-columns: auto auto auto auto auto;
    gap: 10px;
